# scope

./: .beman-tidy.yaml  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  GNUmakefile  README.md  gcovr.cfg  makefile  resources.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  cmake.yml  pre-commit.yml
cmake/: appleclang-toolchain.cmake  beman-install-library.cmake  beman.scope-config.cmake  gnu-toolchain.cmake  llvm-toolchain.cmake  prelude.cmake
examples/: CMakeLists.txt  scope-module.cpp  scope_example.cpp  scope_module.cpp  unique_resource-file.cpp  unique_resource.cpp  unique_resource_example.cpp  unique_resource_file.cpp
include/beman/scope/: beman.scope.cppm  scope.hpp  scope_impl.hpp
infra/: .beman_submodule  .pre-commit-config.yaml  .pre-commit-hooks.yaml
infra/cmake/: use-fetch-content.cmake
paper/: scope.org
papers/: scope.org
tests/: CMakeLists.txt  module.test.cpp  scope_exit.test.cpp  scope_fail.test.cpp  unique_resource.test.cpp  unique_resource_2.test.cpp
tests/beman/scope/: CMakeLists.txt  scope.test.cpp  scope_success.test.cpp
